--- a/q/53417.html
+++ b/q/53417.html
@@ -26,21 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>128</td><td>JavaScript Node.js</td><td>240807T001952Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/274743#274743">Andrew B</a></td></tr>
-<tr d-ix="1"><td>043</td><td>Vyxal j</td><td>210528T213650Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/226409#226409">emanresu</a></td></tr>
-<tr d-ix="2"><td>271</td><td>brainfuck</td><td>201017T130437Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213742#213742">RezNesX</a></td></tr>
-<tr d-ix="3"><td>079</td><td>Haskell</td><td>201017T142848Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213746#213746">lynn</a></td></tr>
-<tr d-ix="4"><td>031</td><td>Charcoal</td><td>201017T134501Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213744#213744">Razetime</a></td></tr>
-<tr d-ix="5"><td>109</td><td>Staq</td><td>150831T193514Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/55762#55762">M L</a></td></tr>
-<tr d-ix="6"><td>139</td><td>Python 3</td><td>150810T220527Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/54450#54450">mbomb007</a></td></tr>
-<tr d-ix="7"><td>361</td><td>BrainFuck</td><td>150810T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/54438#54438">AboveFir</a></td></tr>
-<tr d-ix="8"><td>049</td><td>CJam</td><td>150720T063757Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53423#53423">Optimize</a></td></tr>
-<tr d-ix="9"><td>117</td><td>Ruby</td><td>150720T141455Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53443#53443">lynn</a></td></tr>
-<tr d-ix="10"><td>110</td><td>Ruby</td><td>150720T110622Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53433#53433">Level Ri</a></td></tr>
-<tr d-ix="11"><td>049</td><td>Pyth</td><td>150720T101818Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53432#53432">isaacg</a></td></tr>
-<tr d-ix="12"><td>051</td><td>Pyth</td><td>150720T032730Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53419#53419">Maltysen</a></td></tr>
+<tr d-ix="0"><td>114</td><td>JavaScript Node.js</td><td>240808T133059Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/274803#274803">Fhuvi</a></td></tr>
+<tr d-ix="1"><td>128</td><td>JavaScript Node.js</td><td>240807T001952Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/274743#274743">Andrew B</a></td></tr>
+<tr d-ix="2"><td>043</td><td>Vyxal j</td><td>210528T213650Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/226409#226409">emanresu</a></td></tr>
+<tr d-ix="3"><td>271</td><td>brainfuck</td><td>201017T130437Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213742#213742">RezNesX</a></td></tr>
+<tr d-ix="4"><td>079</td><td>Haskell</td><td>201017T142848Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213746#213746">lynn</a></td></tr>
+<tr d-ix="5"><td>031</td><td>Charcoal</td><td>201017T134501Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/213744#213744">Razetime</a></td></tr>
+<tr d-ix="6"><td>109</td><td>Staq</td><td>150831T193514Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/55762#55762">M L</a></td></tr>
+<tr d-ix="7"><td>139</td><td>Python 3</td><td>150810T220527Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/54450#54450">mbomb007</a></td></tr>
+<tr d-ix="8"><td>361</td><td>BrainFuck</td><td>150810T174117Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/54438#54438">AboveFir</a></td></tr>
+<tr d-ix="9"><td>049</td><td>CJam</td><td>150720T063757Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53423#53423">Optimize</a></td></tr>
+<tr d-ix="10"><td>117</td><td>Ruby</td><td>150720T141455Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53443#53443">lynn</a></td></tr>
+<tr d-ix="11"><td>110</td><td>Ruby</td><td>150720T110622Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53433#53433">Level Ri</a></td></tr>
+<tr d-ix="12"><td>049</td><td>Pyth</td><td>150720T101818Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53432#53432">isaacg</a></td></tr>
+<tr d-ix="13"><td>051</td><td>Pyth</td><td>150720T032730Z</td><td><a href="https://codegolf.stackexchange.com/questions/53417/ascii-borromean-rings/53419#53419">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 128 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 114 bytes</h1>
+<p>Replaced reccuring patterns with their identifiers, which are their indexes in the second string after splitting on the <code>#</code>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;`002
+001001
+201
+101101
+131
+111111
+113
+11011
+31
+01001
+02`.replace(/./g,e=&gt;`  #| #+-----+ #+-|---+ `.split`#`[e])
+</code></pre>
+<p><a href="https://tio.run/##TU9LbsMgEN1zCmRvQG4IdnaRcFc9RV0Vy55EjghYhlZdeNtdj9BeLhdx@dhRBoaZN2@Yz6X9bG03DaPbadPDchLLu6gl5xXivPQXVV5LXpbBHLxG8eaAQqxEPpYSeSXZBKNqOyB7tj8/gS@EcT7jvNgFKYIzR0cyO6rByVy@whtdWmthcoLA1widg56KujPaGgVMmTMhZAL7oZw4EUrXn42W7NqORIlaMTcN1xfdB/ZiBh1IIcRW7Tm7/X43Ojtmt78fb2mRylGEUmOCM@xlnbLRAcw4vo3eZo9gjsy8gW2dCO4ngZVLAKf4Q/5Dh3vnDNPlHw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 128 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>_=&gt;`    +-----+
     |     |
@@ -57,7 +75,7 @@
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1i5BAQi0dUFAmwvErlEAk1xQMTC7BixeA2Vr69aAZUBsOASzoTJcULVgU2BqESbD7Uv4n5yfV5yfk6qXk5@ukaahqcnFpa/FNYAu4tLS/w8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>When the obvious solution is the best - use it!</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Lyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 43 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Lyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 43 bytes</h1>
 <pre><code>»⟑|Ḃṗ=›ḟL«w_¬⌊†⁰÷↳ḋ≈∑Ġ«Ṅ⁽ǔ7₇ÞyΠj»`-+| `τ11/
 </code></pre>
 <p><a href="http://lyxal.pythonanywhere.com?flags=j&amp;code=%C2%BB%E2%9F%91%7C%E1%B8%82%E1%B9%97%3D%E2%80%BA%E1%B8%9FL%C2%ABw_%C2%AC%E2%8C%8A%E2%80%A0%E2%81%B0%C3%B7%E2%86%B3%E1%B8%8B%E2%89%88%E2%88%91%C4%A0%C2%AB%E1%B9%84%E2%81%BD%C7%947%E2%82%87%C3%9Ey%CE%A0j%C2%BB%60-%2B%7C%20%60%CF%8411%2F&amp;inputs=&amp;header=&amp;footer=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -67,12 +85,12 @@
                 # join by newlines
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, <s>282</s> <s>280</s> 271 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, <s>282</s> <s>280</s> 271 bytes</h1>
 <pre><code>+++++++++++[&gt;++++&gt;+++&gt;+++++++++++&gt;+&lt;&lt;&lt;&lt;-]&gt;-&gt;-....&lt;.++.....--.&gt;&gt;&gt;-.&lt;&lt;....&gt;+++.&lt;.....&gt;.&gt;.&lt;&lt;&lt;.++.....--.&gt;...&gt;.&gt;.&lt;.&lt;...&gt;.&lt;.&gt;.&lt;...&gt;.&gt;[.&lt;]&gt;++.&gt;&gt;.&lt;&lt;...--[.&gt;]+++++[&lt;&lt;.&lt;.&gt;&gt;&gt;-]&lt;&lt;.&gt;.&lt;.&lt;.&gt;.&lt;.&lt;.++.&gt;&gt;.&lt;&lt;...--.&gt;&gt;&gt;.&lt;.&lt;.&gt;.&lt;...&gt;.&lt;.&gt;.&gt;.&lt;&lt;&lt;.++.&gt;&gt;.&lt;&lt;...--[.&gt;]&lt;&lt;&lt;..&gt;.&lt;.....&gt;.&gt;.&lt;&lt;..&lt;.++.....--.
 </code></pre>
 <p><a href="https://tio.run/##VU9bCsAgDDuQtCcouYj4sQ0GY7CPwc7vGl@bEdtak1jXezmu/dnOnMOHCEa03YFgDkkQiDpMQ2BWEQW8Z8YTJVoqhS@X/Hm9WxjMaBWiWnKtW1UjkahIdR4jn28ks6auceKTMe66@5hg9mWz8fqc849yfgE" rel="nofollow noreferrer" title="brainfuck – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 79 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 79 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>&quot;]O|f]S]S6|g[:[S[VO1g$S)S*)O1f)])61g&amp;S]RZ|x&quot;&gt;&gt;=(mapM(:&quot;|\n -&quot;)&quot;+++&quot;!!).fromEnum
 </code></pre>
@@ -121,7 +139,7 @@ target!!k `elem` &quot; -\n&quot;   when k ≡ 3 mod 4.
 <pre class="lang-hs prettyprint-override"><code>&quot;ÿJ¤ÿ?ðJ§ð?3ð6*p3303B¤3ó&lt;B§&lt;óÿ&lt;öª|&quot;&gt;&gt;=(mapM(:&quot;+- &quot;)&quot;|-|\n&quot;!!).fromEnum
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 31 bytes</h1>
 <pre><code>Ｂ⁷¦⁷Ｍ±⁴¦²Ｂ⁷¦⁷Ｍ²¦²Ｂ⁷¦⁷Ｍ²→|Ｍ³¦²¦¹
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/98pv0LDXMdck8s3vyxVQ9dEx0iTC1XMCJuQVVBmekaJJldAUWZeiYZSjRJUxhikGCJoqPn//3/dnDIA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a></p>
@@ -129,7 +147,7 @@ target!!k `elem` &quot; -\n&quot;   when k ≡ 3 mod 4.
 <p>It's pretty fun to have a box function.</p>
 <p>Basically draws three boxes at the required location, and patches the required places.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://esolangs.org/wiki/Staq" rel="nofollow">Staq</a>, 109 chars</h1>
+<div id="pu6" class="pu"><h1><a href="https://esolangs.org/wiki/Staq" rel="nofollow">Staq</a>, 109 chars</h1>
 
 <pre><code>&amp;iiiqi{1" "}{211}{c"| "}{fcc}{o"+-|"}{p"+--"}{r"---+"}{ec;}22pr;22c22epr21ec2f2ecor1effcefor;f2ceor1e2c22e2pr
 </code></pre>
@@ -154,7 +172,7 @@ Execution complete.
 &gt;
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>Python 3, 139 bytes</h1>
+<div id="pu7" class="pu"><h1>Python 3, 139 bytes</h1>
 <p>This is the closest I can get to printing it directly (which would be 134 bytes) without actually doing so.... I'm not sure how to shorten it any more.</p>
 <pre><code>a='+-----+'
 b='+-|---+'
@@ -164,14 +182,14 @@ e=c+d
 print(c+a,e*2,a+e[1:],&quot;|   | &quot;*2,d+b+&quot; |&quot;,d*6,d+d+b,&quot;| |   &quot;*2,b+&quot; |&quot;,e[2:]+e,&quot;  &quot;+a,sep='\n')
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>BrainFuck, 361 bytes</h1>
+<div id="pu8" class="pu"><h1>BrainFuck, 361 bytes</h1>
 
 <p>Here is a little BrainFuck program, only printing char by char.</p>
 
 <pre><code>+++++++++[-&gt;&gt;&gt;&gt;++++++++++++++&lt;+++++&lt;+++++&lt;++++&lt;]&gt;----....&gt;--.&gt;.....&gt;--&gt;++++++++++&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;&lt;....&gt;&gt;&gt;.&lt;&lt;&lt;.....&gt;&gt;&gt;.&gt;.&lt;&lt;&lt;.&gt;.....&lt;.&lt;...&gt;&gt;&gt;.&gt;.&lt;.&lt;&lt;&lt;...&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;...&gt;&gt;&gt;.&gt;.&lt;.&lt;&lt;&lt;.&gt;.&gt;.&gt;.&lt;...&lt;.&lt;.&gt;&gt;&gt;.&gt;.&lt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&gt;.&lt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;.&gt;.&gt;.&lt;...&lt;.&gt;&gt;&gt;.&lt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&lt;&lt;&lt;...&gt;&gt;&gt;.&lt;&lt;&lt;.&gt;&gt;&gt;.&gt;.&lt;&lt;&lt;.&gt;.&gt;.&lt;...&lt;.&lt;.&gt;&gt;&gt;.&gt;.&lt;&lt;&lt;&lt;..&gt;&gt;&gt;.&lt;&lt;&lt;.....&gt;&gt;&gt;.&gt;.&lt;&lt;&lt;&lt;..&gt;.&gt;.....&lt;.
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>CJam, <s>53 51 50</s> 49 bytes</h1>
+<div id="pu9" class="pu"><h1>CJam, <s>53 51 50</s> 49 bytes</h1>
 <p>Plain old base conversion...</p>
 <pre><code>&quot;FÓîÞ¤ÛY­ËB[¢O²êÍÓ
 }²|äG&quot;299b4b&quot;+ -|&quot;f=B/N*
@@ -179,7 +197,7 @@ print(c+a,e*2,a+e[1:],&quot;|   | &quot;*2,d+b+&quot; |&quot;,d*6,d+d+b,&quot;| 
 <p>All characters are well in extended ASCII range (ASCII code 1 to 255), so number of characters == number of bytes.</p>
 <p><a href="http://cjam.aditsu.net/#code=%22F%C2%9E%C2%97%C3%93%C3%AE%C3%9E%C2%A4%C3%9BY%C2%AD%C3%8BB%5B%C2%A2O%C2%82%C2%82%C2%B2%C3%AA%C3%8D%C3%93%10%0A%7D%C2%B2%7C%C2%96%C3%A4G%22299b4b%22%2B%20-%7C%22f%3DB%2FN*" rel="nofollow noreferrer">Try it online here</a> and get the original code <a href="http://pastebin.com/Xsvr71TZ" rel="nofollow noreferrer">here</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Ruby, 117 bytes</h1>
+<div id="pu10" class="pu"><h1>Ruby, 117 bytes</h1>
 
 <p>Not winning, but I thought it was a cute approach:</p>
 
@@ -196,7 +214,7 @@ print(c+a,e*2,a+e[1:],&quot;|   | &quot;*2,d+b+&quot; |&quot;,d*6,d+d+b,&quot;| 
   --'.gsub /-./,'+\0---+ '
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>Ruby, 110</h1>
+<div id="pu11" class="pu"><h1>Ruby, 110</h1>
 <pre><code>-2.upto(8){|i|s=&quot; &quot;*(i%6)+&quot;+-----+&quot;*(1-i%2)+&quot; &quot;*9
 6.times{|j|&quot;@d me?K[RR@&quot;[i+2].ord&gt;&gt;j&amp;1&gt;0&amp;&amp;s[j*2]=?|}
 puts s}
@@ -209,7 +227,7 @@ puts s}
   puts s}                                                #print the line.
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1>Pyth, 49 bytes</h1>
+<div id="pu12" class="pu"><h1>Pyth, 49 bytes</h1>
 
 <pre><code>jbc11s@L"+ -|"jC"Tª]UÊ¨WÕÝ_K¨}ÝÝ÷K¨Ý]Òê]UÕ*¡"4
 </code></pre>
@@ -218,7 +236,7 @@ puts s}
 
 <p>This uses base 4 encoding, and chops the string into elevenths, then rejoins them on newlines.</p>
 </div>
-<div id="pu12" class="pu"><h1>Pyth - 51 bytes</h1>
+<div id="pu13" class="pu"><h1>Pyth - 51 bytes</h1>
 <p>I'm sure someone's gonna beat this quick, but just a base compression answer cuz I'm feeling lazy. I'll try to write a serious answer soon.</p>
 <pre><code>s@L&quot;
  +-|&quot;jC&quot; zB²;¶Ê ¿ïÁ»#-ÌClHõy%|ap&quot;5
