--- a/q/45378.html
+++ b/q/45378.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>Forth gforth</td><td>240808T133257Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/274804#274804">reffu</a></td></tr>
+<tr d-ix="0"><td>030</td><td>Forth gforth</td><td>240808T133257Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/274804#274804">reffu</a></td></tr>
 <tr d-ix="1"><td>nan</td><td></td><td>240808T075532Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/274797#274797">RARE Kpo</a></td></tr>
 <tr d-ix="2"><td>010</td><td>Pyt</td><td>230405T185014Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/259781#259781">Kip the </a></td></tr>
 <tr d-ix="3"><td>012</td><td>Zsh</td><td>230405T174717Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/259779#259779">GammaFun</a></td></tr>
@@ -57,18 +57,18 @@
 <tr d-ix="28"><td>022</td><td>Python 2</td><td>150205T063902Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/45381#45381">xnor</a></td></tr>
 <tr d-ix="29"><td>009</td><td>CJam</td><td>150205T061057Z</td><td><a href="https://codegolf.stackexchange.com/questions/45378/join-n-copies-of-a-snippet-to-produce-n2-characters/45379#45379">Optimize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://www.complang.tuwien.ac.at/forth/gforth/Docs-html/" rel="nofollow noreferrer">Forth (gforth)</a>, 31 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.complang.tuwien.ac.at/forth/gforth/Docs-html/" rel="nofollow noreferrer">Forth (gforth)</a>, <strike>31</strike> 30 bytes</h1>
 
-<pre class="lang-forth prettyprint-override"><code>1 depth dup 0 [do] 1. .r [loop]
+<pre class="lang-forth prettyprint-override"><code>1 depth 2* 1 [do] 1. .r [loop]
 </code></pre>
-<p><a href="https://tio.run/##S8svKsnQTU8DUf//GyqkpBaUZCiklBYoGChEp@THKhjqKegVKUTn5OcXxP7/DwA" rel="nofollow noreferrer" title="Forth (gforth) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##S8svKsnQTU8DUf//GyqkpBaUZCgYaSkYKkSn5McqGOop6BUpROfk5xfE/v8PAA" rel="nofollow noreferrer" title="Forth (gforth) – Try It Online">Try it online!</a></p>
 <h2>Explanation</h2>
-<p>Inspired by Ben Jackson's Postscript answer, and uses effectively the same logic. Each copy leaves 2 items on the stack, then uses the sum of odd-numbers to get the appropriate n^2 characters printed. Char is just the number 1 printed without spaces</p>
+<p>Inspired by Ben Jackson's Postscript answer, and uses effectively the same logic. Each copy leaves 1 extra item on the stack, then prints 2N-1 characters. This leads to the sum of odd-numbers trick causing us to output N^2 characters</p>
 <h2>Code Explanation</h2>
 <pre class="lang-forth prettyprint-override"><code>1            \ place the number 1 on the stack
 depth        \ get the count of items on the stack
-dup          \ duplicate the count of items
-0 [do]       \ start a loop from 0 to count-1
+2*           \ duplicate the count of items
+1 [do]       \ start a loop from 1 to (2*count)-1
  1. .r       \ output the char '1' right-aligned in a space of size 0 (trick to avoid a space afterwards)
 [loop]       \ end the counted loop 
 </code></pre>
