--- a/q/105998.html
+++ b/q/105998.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>199</td><td>Haskell GHC2024</td><td>240807T222037Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274769#274769">Khuldrae</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Haskell GHC2024</td><td>240807T222037Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274769#274769">Khuldrae</a></td></tr>
 <tr d-ix="1"><td>065</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
 <tr d-ix="2"><td>253</td><td>JavaScript Node.js</td><td>240807T073016Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274752#274752">Andrew B</a></td></tr>
 <tr d-ix="3"><td>156</td><td>Python</td><td>170107T172416Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106006#106006">busukxua</a></td></tr>
@@ -58,15 +58,26 @@
 <tr d-ix="29"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 <tr d-ix="30"><td>173</td><td>JavaScript ES6</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a> (GHC2024), 199 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a> (GHC2024), <del>199</del> 193 bytes</h1>
+<p>-5 by realizing <code>intercalate x [y] == y</code>, -1 by not using <code>fmap</code> on a list like a silly goose</p>
 
 <pre class="lang-hs prettyprint-override"><code>import Text.Printf
 (#)=replicate
-i=drop 3.(&gt;&gt;=(&quot; | &quot;++))
-o=i(3#&quot;Dec  Chr  &quot;):34#'-':(i&lt;$&gt;(zipWith(printf&quot;%-5d%-5s&quot;)&lt;*&gt;fmap(\case{32-&gt;&quot;Space&quot;;127-&gt;&quot;DEL&quot;;c-&gt;[toEnum c]})&lt;$&gt;[[c,c+32..127]|c&lt;-[32..63]]))
+o=drop 3.(&gt;&gt;=(&quot; | &quot;++))&lt;$&gt;(3#&quot;Dec  Chr  &quot;):[34#'-']:(zipWith(printf&quot;%-5d%-5s&quot;)&lt;*&gt;map(\case{32-&gt;&quot;Space&quot;;127-&gt;&quot;DEL&quot;;c-&gt;[toEnum c]})&lt;$&gt;[[c,c+32..127]|c&lt;-[32..63]])
 </code></pre>
-<p><a href="https://tio.run/##TY5RS8MwGEXf@ys@0skSZ4q2U2FrC2MbUygqbOJD7UNMUxZsk5CmMNz222vnkxfuw4XD4e5Z@y3quqcUMtZ8lWzJWgGyBcOsA13B5mkZ3oZTwEo7aDtjtHWiBK1g9/xKvCP1IVu8bN4Xm/V/g0/PvWwuMOzEwQVvVipXedgniRWmlpw54cmktNpAFOA0TTCCE6DJhBBPJxJHPloJDrDcWwBEZtHUH9PxDMt4lOIfaT6k22PzZ0VX9L4c2iISX6dVwwz@5MOJYxTSFG0N4wLN78LHYazWGZpzmuZOr1XXAC/OZBDmOb/hkygMggErTjym@WU8REVBSN8wqSCBUnswxHRu62ymIIBO1VKJFkag@18" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
-<p>Uses (approximately) @corvus_192's shorter <code>intercalate</code> from <a href="https://codegolf.stackexchange.com/a/266748/73884">this tip</a>. I'll add an explanation after trying to golf it down a little more.</p>
+<p><a href="https://tio.run/##TY1RS8MwGEXf@ys@0skSZ4q2U2FrC2MbUygqbOJD7UNMMxZsk5CmMNz222vrkxfuw4HLuQfWfIuq6iiFjNVfJVuyRoBswDDrQO9h87QMb8MpYKUdNK0x2jpRglawe34l3on6kC1eNu@Lzfq/waeXTtbDGHbi6II3K5Xbe9gniRWmkpw54emktNpAFOA0TTCCM6DJhJB4lOLIRyvBAZYHC4DILI@m/piOixn@keZDugM2f0Z0Re/Lvg0i8XVaM4M/ef9/ikKaoq1hXKD5XfjYw2qdoTmnae70WrU18OIyPOU5v@GTKAyCflaceUzzAR6ioiBdzaSCBErtQR/Tuq2zmYIAWlVJJRoYge5@AQ" rel="nofollow noreferrer">Try it online!</a></p>
+<pre class="lang-hs prettyprint-override"><code>drop 3.(&gt;&gt;=(&quot; | &quot;++))&lt;$&gt;(3#&quot;Dec  Chr  &quot;):[34#'-']:(zipWith(printf&quot;%-5d%-5s&quot;)&lt;*&gt;map(\case{32-&gt;&quot;Space&quot;;127-&gt;&quot;DEL&quot;;c-&gt;[toEnum c]})&lt;$&gt;[[c,c+32..127]|c&lt;-[32..63]])
+drop 3.(&gt;&gt;=(&quot; | &quot;++))                                                                                                                                             `intercalate &quot; | &quot;` without the Data.List import
+                     &lt;$&gt;                                                                                                                                          map over list:
+                        (3#&quot;Dec  Chr  &quot;):                                                                                                                           First line in three pieces minus the &quot; | &quot; separators, followed by
+                                         [34#'-']:                                                                                                                  Second line in one piece (unchanged by intercalate), followed by
+                                                  (                                                                                                          )
+                                                                                                                                  [[c,c+32..127]|c&lt;-[32..63]]       For each row, the three characters in that row as numbers...
+                                                   zipWith(                )&lt;*&gt;                                                &lt;$&gt;[[c,c+32..127]|c&lt;-[32..63]]         ... combined with a copy of that row transformed by...
+                                                                               map(\case{32-&gt;&quot;Space&quot;;127-&gt;&quot;DEL&quot;;c-&gt;[toEnum c]})                                       ... self-explanatory...
+                                                           printf&quot;%-5d%-5s&quot;                                                                                           ... using this pretty-printing function to make a table cell
+</code></pre>
+<p>Shorter <code>intercalate &quot; | &quot;</code> adapted from a <a href="https://codegolf.stackexchange.com/a/266748/73884">tip by @corvus_192</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 65 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>First pass at this; very much not happy with it. Particularly the insertion of the line of dashes. Another approach may be needed.</p>
