--- a/q/274775.html
+++ b/q/274775.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
-<tr d-ix="1"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="0"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="1"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
 <tr d-ix="2"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
 <tr d-ix="3"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
 <tr d-ix="4"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
@@ -42,7 +42,19 @@
 <tr d-ix="13"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
 <tr d-ix="14"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<pre><code>length=&quot;\r24 hours&quot;
+day = &quot;Monday&quot;
+x = day.length
+print(x)
+</code></pre>
+<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="nofollow noreferrer" title="gnuplot – Try It Online">Try it online!</a></p>
+<p>Note that this has only been tested on a Windows computer (see the screenshot below) while the output in TIO is incorrect.</p>
+<h4>How this works:</h4>
+<p>Dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
+<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>getmetatable''.__index=load&quot;return'24 hours'&quot;
 day = &quot;Monday&quot;
@@ -51,18 +63,6 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##DccxDoAgDADAnVeQLujiYFx5gm8gNTRAgsVgSfD1yHaXG44RSG4SFLwyGbM5l9hTt7mgh0rSKpv90LG0@hpQHj9tNZyFp0D1mYktEweJ6qmJZenrGD8" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 <p>The first line simply overrides string indexing to return <code>'24 hours'</code>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
-<pre><code>length=&quot;\r24 hours&quot;
-day = &quot;Monday&quot;
-x = day.length
-print(x)
-</code></pre>
-<p><a href="https://tio.run/##S88rLcjJL/lfnKpQUKSkq/Q/JzUvvSTDVimmyMhEISO/tKhYiSslsVLBVkHJNz8PyFLiqgBygAw9iFKugqLMvBKNCs3//wE" rel="nofollow noreferrer" title="gnuplot – Try It Online">Try it online!</a></p>
-<p>Note that this only works on a Windows computer (thus the output in TIO is wrong).</p>
-<h4>How this works:</h4>
-<p>Dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
-<p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
 <pre><code>class C {
