--- a/q/274775.html
+++ b/q/274775.html
@@ -26,23 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="1"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
-<tr d-ix="2"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
-<tr d-ix="3"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
-<tr d-ix="4"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
-<tr d-ix="5"><td>051</td><td>Charcoal</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
-<tr d-ix="6"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
-<tr d-ix="7"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
-<tr d-ix="8"><td>060</td><td>R</td><td>240808T062453Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274789#274789">pajonk</a></td></tr>
-<tr d-ix="9"><td>124</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
-<tr d-ix="10"><td>168</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="0"><td>135</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="1"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="2"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="3"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
+<tr d-ix="4"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
+<tr d-ix="5"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
+<tr d-ix="6"><td>051</td><td>Charcoal</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="7"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
+<tr d-ix="8"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
+<tr d-ix="9"><td>060</td><td>R</td><td>240808T062453Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274789#274789">pajonk</a></td></tr>
+<tr d-ix="10"><td>124</td><td>Raku Perl 6 rakudo</td><td>240808T051046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274784#274784">bb94</a></td></tr>
 <tr d-ix="11"><td>061</td><td>Uiua</td><td>240808T025342Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274779#274779">noodle p</a></td></tr>
 <tr d-ix="12"><td>071</td><td>JavaScript Node.js</td><td>240808T030639Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274781#274781">noodle p</a></td></tr>
 <tr d-ix="13"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
 <tr d-ix="14"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> 135 bytes</h1>
+<p><em>Thanks to G B for −33 bytes.</em></p>
+<pre class="lang-cpp prettyprint-override"><code>#include&lt;cstdio&gt;
+#define print(Z)puts(&quot;24 hours&quot;);}
+struct A{A*length;A(char*){}};main(){A*x,
+day = &quot;Monday&quot;;
+x = day.length;
+print(x);
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcbNdOTMvOac0JdUmubgkJTPfjks5JTUtMy9VoaAoM69EI0qzoLSkWEPJyEQhI7-0qFhJ07qWq7ikqDS5RMGx2lErJzUvvSTD2lEjOSOxSEuzurbWOjcxM09DEyhXocOVklipYKug5JufB2QpWXNVAHlAlh5UGxfEkgpNa4hzoK6CuQ4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -54,7 +65,7 @@ print(x)
 <p>Dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>getmetatable''.__index=load&quot;return'24 hours'&quot;
 day = &quot;Monday&quot;
@@ -64,7 +75,7 @@ print(x)
 <p><a href="https://tio.run/##DccxDoAgDADAnVeQLujiYFx5gm8gNTRAgsVgSfD1yHaXG44RSG4SFLwyGbM5l9hTt7mgh0rSKpv90LG0@hpQHj9tNZyFp0D1mYktEweJ6qmJZenrGD8" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 <p>The first line simply overrides string indexing to return <code>'24 hours'</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
 <pre><code>class C {
 public void print(){System.out.print(&quot;24 hours&quot;);}
 void main() throws Exception {
@@ -83,7 +94,7 @@ java --enable-preview C
 </code></pre>
 <p>First time posting here so I don't know if using reflection is allowed, I don't see any other way to avoid the mandatory <code>;</code> at the end of each line. Technically the <code>print</code> function is still invoked.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
 <pre><code>print _^:=Print@&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -106,7 +117,7 @@ print(x)
 <hr />
 <p>Probably against the spirit of the rules, but line 1 could simply be <code>print:=Print@&quot;24 hours&quot;</code> (-3 bytes): print <code>24 hours</code> when <code>print</code> is encountered.</p>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 77 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 77 bytes</h1>
 <pre><code>=let(print,lambda(_,&quot;24 hours&quot;),_,
 day = &quot;Monday&quot;&amp;
 x = day.length,
@@ -114,7 +125,7 @@ print(x)
 )
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 51 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 51 bytes</h1>
 <pre><code>2Ｉ÷Ｌ
 day = &quot;Monday&quot;
 x = day.length
@@ -131,7 +142,7 @@ print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fjet3-9ZeXj6-z1ruFISKxVsFZR88_OALCWuCiAHyNDLSc1LL8ngKijKzCvRqNDkOrT9UeM2hYz80qLiJcVJycVQg2AGAgA" rel="nofollow noreferrer" title="Charcoal – Attempt This Online">Attempt This Online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 68 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 68 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>def print a;puts&quot;24 hours&quot;end
 day = &quot;Monday&quot;
@@ -149,7 +160,7 @@ print(x)
 </code></pre>
 <p><a href="https://tio.run/##KypNqvz/P7ikKDMvXS85J7G4OD61LDGnOiU1TSEnNS@9JMNaychEISO/tKhYKTUvpZYrJbFSwVZByTc/D8hS4qoAcoAMPYhirgKgQSUaFZr//wMA" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 67 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>filter print{'24 hours'}
 $day = &quot;Monday&quot;
@@ -159,7 +170,7 @@ print($x)
 <p><a href="https://tio.run/##K8gvTy0qzkjNyfn/Py0zpyS1SKGgKDOvpFrdyEQhI7@0qFi9lkslJbFSwVZByTc/D8hS4lKpAPJAgno5qXnpJRlcYC0aKhWa//8DAA" rel="nofollow noreferrer" title="PowerShell – Try It Online">Try it online!</a></p>
 <p>Straightforward: 'filter' is basically the same as 'function' (but with automatic pipeline processing, which is not the point here), but has only 6 instead of 8 characters. It will ignore any arguments and just return the static string '24 hours'.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 60 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 60 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>day.length=&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -168,23 +179,13 @@ print(x)
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN21SEiv1clLz0ksybJWMTBQy8kuLipW4gKIKtgpKvvl5QJYSVwWQg1DIVVCUmVeiUaEJMQNqFMxIAA" rel="noreferrer">Attempt This Online!</a></p>
 <p><code>.</code> is just a part of variable name in R.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>126</s> 124 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>126</s> 124 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>use MONKEY-TYPING;augment class Str {method length {&quot;24 hours&quot;}};my \day:=my \x:=$;
 day = &quot;Monday&quot;;
 x = day.length;
 print(x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMGCpaUlaboWN2tKi1MVfP39vF0jdUMiAzz93K0TS9NzU_NKFJJzEouLFYJLihSqc1NLMvJTFHJS89JLMhSqlYxMFDLyS4uKlWprrXMrFWJSEiutbEGMCitbFWsuIFfBVkHJNz8PyFKy5qoA8oAsPYh-a66Cosy8Eo0KTYgboE6BOQkA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu10" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, 168 bytes</h1>
-<pre class="lang-cpp prettyprint-override"><code>#include&lt;stdio.h&gt;
-struct A{A*length;void operator=(const char*s){}};void print(A*a){printf(&quot;24 hours&quot;);}int main(){A day,*x;
-day = &quot;Monday&quot;;
-x = day.length;
-print(x);
-}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=NY5NCsIwEEb3OUWom6RoF-JCiBVyAM8gIWmbQE1KfqQSchI33QhuPJC3Mdq6GOZ9MzDz7i8-9MF969xxPk2P4NvN_v1cKc37IJqD80KZSh6B8zZwD2mkZd_ozktyNUpAMzSWeWNrxI12HnLJbOlwTGneD1Zpj2jJcPxhi4rtDkoTrCswSXkCL0xphCOFgt3W5UhA7rCGxcnoTAUBY06ZquUvmG-OmIA0-y7af_0P" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu11" class="pu"><h1>Uiua, 61 bytes</h1>
 <pre><code>print=ggg&amp;p
