--- a/q/274775.html
+++ b/q/274775.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
-<tr d-ix="1"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
-<tr d-ix="2"><td>135</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
-<tr d-ix="3"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
-<tr d-ix="4"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
-<tr d-ix="5"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
-<tr d-ix="6"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
-<tr d-ix="7"><td>051</td><td>Charcoal</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="0"><td>263</td><td>VBScript</td><td>240808T084948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274798#274798">Neil</a></td></tr>
+<tr d-ix="1"><td>047</td><td>Japt</td><td>240808T190204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274816#274816">Shaggy</a></td></tr>
+<tr d-ix="2"><td>058</td><td>gnuplot</td><td>240808T164957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274809#274809">int 21h </a></td></tr>
+<tr d-ix="3"><td>135</td><td>C++ GCC</td><td>240808T051944Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274785#274785">bb94</a></td></tr>
+<tr d-ix="4"><td>084</td><td>Lua</td><td>240808T165430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274811#274811">chunes</a></td></tr>
+<tr d-ix="5"><td>210</td><td>Java 22</td><td>240808T151507Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274807#274807">mastaH</a></td></tr>
+<tr d-ix="6"><td>065</td><td>Wolfram Language Mathematica</td><td>240808T073220Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274795#274795">att</a></td></tr>
+<tr d-ix="7"><td>077</td><td>Google Sheets</td><td>240808T094632Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274800#274800">doubleun</a></td></tr>
 <tr d-ix="8"><td>068</td><td>Ruby</td><td>240808T075112Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274796#274796">G B</a></td></tr>
 <tr d-ix="9"><td>067</td><td>PowerShell</td><td>240808T070148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274793#274793">user3141</a></td></tr>
 <tr d-ix="10"><td>060</td><td>R</td><td>240808T062453Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274789#274789">pajonk</a></td></tr>
@@ -43,14 +43,36 @@
 <tr d-ix="14"><td>107</td><td>PowerShell Core</td><td>240808T022802Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274778#274778">Julian</a></td></tr>
 <tr d-ix="15"><td>068</td><td>Python</td><td>240808T013510Z</td><td><a href="https://codegolf.stackexchange.com/questions/274775/make-a-gcse-students-error-work/274777#274777">Albert.L</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h2>VBScript, 263 bytes</h2>
+<pre><code>class o
+public length
+public property let day(x)
+end property
+public property get day
+me.length=&quot;24 hours&quot;
+set day=me
+end property
+function print(x)
+end function
+function x
+day = &quot;Monday&quot;
+x = day.length
+print(x)
+end function
+end class
+set x=new o
+wscript.echo x.x
+</code></pre>
+<p><code>day</code> is a date function in VBScript. <code>print</code> is apparently also a function, but I don't know what it does. Wrapping everything in a class allows me to declare local properties to override them, so the only statement that actually achieves anything is <code>x = day.length</code>, which reads the <code>me.length</code> set earlier and returns it as the result of <code>x.x</code>, which we echo at the end of the script.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 47 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>8î`24 ÊÀsday = &quot;Monday&quot;
 x = day.length
 print(x)
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=OO5gMjQgysBzZGF5ID0gIk1vbmRheSIKeCA9IGRheS5sZW5ndGgKcHJpbnQoeCk" rel="nofollow noreferrer">Test it</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://www.gnuplot.info/" rel="nofollow noreferrer">gnuplot</a>, 58 bytes</h1>
 <pre><code>length=&quot;\r24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -62,7 +84,7 @@ print(x)
 <p>The dot operator concatenates two strings. This way the string x contains <code>&quot;Monday\r24 hours&quot;</code>. When printing x, first &quot;Monday&quot; appears, then the symbol <code>\r</code> (carriage return without linefeed) moves the cursor to the start of the same line and then printing &quot;24 hours&quot; over the string &quot;Monday&quot; overwrites it.</p>
 <p><a href="https://i.sstatic.net/gY4vz6fI.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/gY4vz6fI.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> 135 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C++ (GCC)</a>, <s>168</s> 135 bytes</h1>
 <p><em>Thanks to G B for −33 bytes.</em></p>
 <pre class="lang-cpp prettyprint-override"><code>#include&lt;cstdio&gt;
 #define print(Z)puts(&quot;24 hours&quot;);}
@@ -73,7 +95,7 @@ print(x);
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m702uSCntBiE49OTkxcsWFpakqZrcbNdOTMvOac0JdUmubgkJTPfjks5JTUtMy9VoaAoM69EI0qzoLSkWEPJyEQhI7-0qFhJ07qWq7ikqDS5RMGx2lErJzUvvSTD2lEjOSOxSEuzurbWOjcxM09DEyhXocOVklipYKug5JufB2QpWXNVAHlAlh5UGxfEkgpNa4hzoK6CuQ4A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 84 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>getmetatable''.__index=load&quot;return'24 hours'&quot;
 day = &quot;Monday&quot;
@@ -83,7 +105,7 @@ print(x)
 <p><a href="https://tio.run/##DccxDoAgDADAnVeQLujiYFx5gm8gNTRAgsVgSfD1yHaXG44RSG4SFLwyGbM5l9hTt7mgh0rSKpv90LG0@hpQHj9tNZyFp0D1mYktEweJ6qmJZenrGD8" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 <p>The first line simply overrides string indexing to return <code>'24 hours'</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://openjdk.org/projects/jdk/22/" rel="nofollow noreferrer">Java 22</a>, 210 bytes</h1>
 <pre><code>class C {
 public void print(){System.out.print(&quot;24 hours&quot;);}
 void main() throws Exception {
@@ -102,7 +124,7 @@ java --enable-preview C
 </code></pre>
 <p>First time posting here so I don't know if using reflection is allowed, I don't see any other way to avoid the mandatory <code>;</code> at the end of each line. Technically the <code>print</code> function is still invoked.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 65 bytes</h1>
 <pre><code>print _^:=Print@&quot;24 hours&quot;
 day = &quot;Monday&quot;
 x = day.length
@@ -125,30 +147,13 @@ print(x)
 <hr />
 <p>Probably against the spirit of the rules, but line 1 could simply be <code>print:=Print@&quot;24 hours&quot;</code> (-3 bytes): print <code>24 hours</code> when <code>print</code> is encountered.</p>
 </div>
-<div id="pu6" class="pu"><h1>Google Sheets, 77 bytes</h1>
+<div id="pu7" class="pu"><h1>Google Sheets, 77 bytes</h1>
 <pre><code>=let(print,lambda(_,&quot;24 hours&quot;),_,
 day = &quot;Monday&quot;&amp;
 x = day.length,
 print(x)
 )
 </code></pre>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 51 bytes</h1>
-<pre><code>2Ｉ÷Ｌ
-day = &quot;Monday&quot;
-x = day.length
-print(x)
-χ hours
-</code></pre>
-<p><a href="https://tio.run/##S85ILErOT8z5/9/o/Z6Vh7e/37OGKyWxUsFWQck3Pw/IUuKqAHKADL2c1Lz0kgyugqLMvBKNCk2u8@0KGfmlRcX//wMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Explanation: ASCII text is simply a literal string in Charcoal; after including the necessary newlines you get a 40-character string. The best use I could find for that string was to divide its length by 10 to give the <code>4</code> in the output; the rest of the output is just literal strings.</p>
-<p>Other alternatives would have been to subtract <code>16</code>, or divide by <code>2</code> and add <code>4</code>, but they still all work out at the same length. Example:</p>
-<pre><code>Ｉ×Ｌ
-day = &quot;Monday&quot;
-x = day.length
-print(x)
-·⁶ hours
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fjet3-9ZeXj6-z1ruFISKxVsFZR88_OALCWuCiAHyNDLSc1LL8ngKijKzCvRqNDkOrT9UeM2hYz80qLiJcVJycVQg2AGAgA" rel="nofollow noreferrer" title="Charcoal – Attempt This Online">Attempt This Online!</a></p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 68 bytes</h1>
 
