--- a/q/252593.html
+++ b/q/252593.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>063</td><td>JavaScript Node.js</td><td>240808T005734Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/274776#274776">Andrew B</a></td></tr>
+<tr d-ix="0"><td>061</td><td>JavaScript Node.js</td><td>240808T005734Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/274776#274776">Andrew B</a></td></tr>
 <tr d-ix="1"><td>095</td><td>Befunge93</td><td>240422T085610Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/272719#272719">Adelie</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Tcl</td><td>230410T120317Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/259930#259930">138 Aspe</a></td></tr>
 <tr d-ix="3"><td>038</td><td>J</td><td>230411T220555Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/259982#259982">south</a></td></tr>
@@ -63,11 +63,11 @@
 <tr d-ix="34"><td>039</td><td>Factor + math.text.english</td><td>221005T024112Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/252595#252595">chunes</a></td></tr>
 <tr d-ix="35"><td>007</td><td>Vyxal</td><td>221005T022330Z</td><td><a href="https://codegolf.stackexchange.com/questions/252593/zottffssentettffssen/252594#252594">naffetS</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 63 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 63 </s> 61 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>_=&gt;`zo${a='ttffssen'}te${a}${a.replace(/./g,c=&gt;c.repeat(10))}o`
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;`zo${a='ttffssen'}te${a+a.replace(/./g,c=&gt;c.repeat(10))}o`
 </code></pre>
-<p><a href="https://tio.run/##FchBCoAgEADAzwQplNUD7Cu1bKsU4kYuHQrfbnaYyxxwQ8JrP6WPvFFxtix2Xh9uXrCtiHMpUWyzUI1cmYvOAEhqMIPv0M74D4GoadQ681qQY@JAJrBXTmldPg" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FchRDkAwDADQy0hswXCAuYo11QlZVtkaH8TZh/f5djghY9oO6SIvVLwts53cxdUNthbxPmeK9SP0RQMm0REASfWmX1u0E/5DIGoctH7YFeSYOZAJvCqvtC4v" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/catseye/Befunge-93" rel="nofollow noreferrer">Befunge-93</a>, 95 bytes</h1>
 <pre><code>etoz&quot;,,&gt;&quot;nessfftt&quot;,,,,v
