--- a/q/218284.html
+++ b/q/218284.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>016</td><td>Japt S</td><td>240808T112732Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/274802#274802">Shaggy</a></td></tr>
-<tr d-ix="1"><td>047</td><td>JavaScript Node.js</td><td>240808T072241Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/274794#274794">Andrew B</a></td></tr>
+<tr d-ix="0"><td>046</td><td>JavaScript Node.js</td><td>240808T072241Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/274794#274794">Andrew B</a></td></tr>
+<tr d-ix="1"><td>016</td><td>Japt S</td><td>240808T112732Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/274802#274802">Shaggy</a></td></tr>
 <tr d-ix="2"><td>025</td><td>Uiua</td><td>240421T163448Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/272708#272708">noodle p</a></td></tr>
 <tr d-ix="3"><td>033</td><td>sed</td><td>221101T203722Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/254028#254028">Jiř&#237</a></td></tr>
 <tr d-ix="4"><td>179</td><td>brainfuck</td><td>210210T012515Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/218822#218822">Dingus</a></td></tr>
@@ -114,7 +114,13 @@
 <tr d-ix="85"><td>016</td><td>Charcoal</td><td>210131T013012Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/218288#218288">Neil</a></td></tr>
 <tr d-ix="86"><td>025</td><td>Retina 0.8.2</td><td>210131T012630Z</td><td><a href="https://codegolf.stackexchange.com/questions/218284/output-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo-buffalo/218286#218286">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-S</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 47 </s> 46 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;'B b B b b b B b'.replace(/b/gi,'$&amp;uffalo')
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1k7dSSFJAYSTILS6XlFqQU5icqqGfpJ@eqaOuopaaVpaYk6@uub/5Py84vycVL2c/HSNNA1Nzf8A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-S</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>#¢ìbpu)m+&quot;uffalo
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVM&amp;code=I6LsYnB1KW0rInVmZmFsbw" rel="nofollow noreferrer">Test it</a></p>
@@ -129,12 +135,6 @@
         +&quot;uffalo     :  Concatenate &quot;uffalo&quot;
                      :Implicit output joined with spaces
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 47 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>_=&gt;'B b B b b b B b'.replace(/ |$/g,'uffalo$&amp;')
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/e1k7dSSFJAYSTILS6XlFqQU5icqqGvkKNin66jnppWlpiTr6Kmrrm/@T8vOL8nFS9nPx0jTQNTc3/AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1>Uiua, 25 bytes</h1>
 <pre><code>↘2/$&quot;_ _uffalo&quot;+@B×32⋯372
